	PR tree-optimization/19121 	* tree-ssa-alias.c (compute_flow_sensitive_aliasing): When 	adding aliases to a name tag, also add them to the pointer's 	type tag. 	* tree-ssa-copy.c (merge_alias_info): Do not merge flow 	sensitive alias info at all.  Only check that the two pointers 	have compatible pointed-to sets. 	* tree-ssa.c (verify_name_tags): Verify that the alias set of 	a pointer's type tag is a superset of the alias set of the 	pointer's name tag.

testsuite/ChangeLog:

	PR tree-optimization/19121
	* gcc.c-torture/compile/pr19121.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@93810 138bc75d-0d04-0410-961f-82ee72b054a4